--- a/src/styles/search/search.css
+++ b/src/styles/search/search.css
@@ -45,4 +45,26 @@ $breakpoint argument choices:
     padding: 2rem;
   }
 }
+
+.search .notfound_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search .notfound_icon .animated_icon {
+  margin-top: -10rem;
+}
+
+@media only screen and (max-width: 800px) {
+  .search .notfound_icon .animated_icon {
+    margin-top: -8rem;
+  }
+}
 /*# sourceMappingURL=search.css.map */
