--- a/src/styles/productlayout/productlayout.scss
+++ b/src/styles/productlayout/productlayout.scss
@@ -155,6 +155,13 @@
                     h3 {
                         font-size: 1.7rem;
                         margin-bottom: 1.5rem;
+                        // display: flex;
+                        // justify-content: space-between;
+
+                        span {
+                            color: $color-grey-dark-2;
+                            font-size: 1.5rem;
+                        }
                     }
 
                     .add_cart {
