--- a/src/styles/plusminusbtn/plusminusbtn.scss
+++ b/src/styles/plusminusbtn/plusminusbtn.scss
@@ -36,11 +36,12 @@
         // width: 23rem;
         width: 100%;
         border: none;
-        border: solid .3rem;
-        border-image: $border-image;
+        // border: solid .3rem;
+        // border-image: $border-image;
         text-align: center;
         outline: none;
         padding: .9rem;
+        background-color: $color-grey-light;
         // width: 25rem;
         font-size: 2rem;
 
