--- a/src/styles/abstracts/mixins/mixins.css
+++ b/src/styles/abstracts/mixins/mixins.css
@@ -13,5 +13,4 @@ $breakpoint argument choices:
 -big-desktop
 
 1em = 16px
-*/
-/*# sourceMappingURL=mixins.css.map */
+*//*# sourceMappingURL=mixins.css.map */
