--- a/src/styles/animatedicon/animatedicon.css
+++ b/src/styles/animatedicon/animatedicon.css
@@ -1,18 +1,10 @@
 .animated_icon {
   max-width: 500px;
   max-height: 500px;
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   margin-top: auto;
   margin-bottom: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-/*# sourceMappingURL=animatedicon.css.map */
+  align-items: center;
+  justify-content: center;
+}/*# sourceMappingURL=animatedicon.css.map */
