--- a/src/styles/eshopcarousel/eshopcarousel.css
+++ b/src/styles/eshopcarousel/eshopcarousel.css
@@ -20,23 +20,19 @@ $breakpoint argument choices:
   -o-object-fit: fill;
      object-fit: fill;
 }
-
 @media only screen and (max-width: 1000px) {
   .image {
     height: 350px;
   }
 }
-
 @media only screen and (max-width: 600px) {
   .image {
     height: 250px;
   }
 }
-
 .image img {
   width: 100%;
   height: 100%;
   -o-object-fit: fill;
      object-fit: fill;
-}
-/*# sourceMappingURL=eshopcarousel.css.map */
+}/*# sourceMappingURL=eshopcarousel.css.map */
