--- a/src/styles/landingpagelayout/landingpagelayout.css
+++ b/src/styles/landingpagelayout/landingpagelayout.css
@@ -17,46 +17,36 @@ $breakpoint argument choices:
 .landing_page {
   overflow: hidden;
 }
-
 .landing_page-1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 450px;
   width: 100%;
   position: relative;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-1 {
     height: 350px;
   }
 }
-
 @media only screen and (max-width: 600px) {
   .landing_page-1 {
     height: 250px;
   }
 }
-
 .landing_page-1 .flyout {
   width: 18%;
   background-color: #F4F2F4;
-  -webkit-transition: all .1s ease-in .3s;
-  transition: all .1s ease-in .3s;
+  transition: all 0.1s ease-in 0.3s;
 }
-
 .landing_page-1 .flyout .our_cat {
   display: none;
   overflow: hidden;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout .our_cat {
     display: block;
   }
 }
-
 .landing_page-1 .flyout .our_cat .close_menu {
   position: absolute;
   top: 1rem;
@@ -64,7 +54,6 @@ $breakpoint argument choices:
   color: #b5057a;
   font-size: 3.5rem;
 }
-
 .landing_page-1 .flyout .our_cat h3 {
   background-color: #b5057a;
   color: #fff;
@@ -72,7 +61,6 @@ $breakpoint argument choices:
   width: 100%;
   padding: 1rem 2rem;
 }
-
 .landing_page-1 .flyout .our_cat .brand_name {
   margin-top: 1.5rem;
   padding: 1rem 2rem;
@@ -81,13 +69,11 @@ $breakpoint argument choices:
   font-weight: 500;
   width: 100%;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-1 .flyout {
     width: 20%;
   }
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout {
     position: fixed;
@@ -100,26 +86,15 @@ $breakpoint argument choices:
     width: 0;
   }
 }
-
 .landing_page-1 .flyout_menu {
   list-style: none;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout_menu {
     height: -webkit-fit-content;
@@ -127,61 +102,45 @@ $breakpoint argument choices:
     height: fit-content;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item {
   padding: 1rem 4rem;
   cursor: pointer;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding: 0;
   overflow: hidden;
 }
-
 .landing_page-1 .flyout_menu .menu_item:hover {
   background-color: #fff;
 }
-
 .landing_page-1 .flyout_menu .menu_item:hover .menu {
   visibility: unset;
 }
-
 .landing_page-1 .flyout_menu .menu_item:hover .menu_title {
   font-weight: 500;
-  background-image: -webkit-gradient(linear, left top, right top, from(#dc3545), to(#5d05b5));
   background-image: linear-gradient(to right, #dc3545, #5d05b5);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_title {
   font-size: 1.5rem;
   font-weight: 400;
   color: #616161;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 1rem 4rem;
   white-space: nowrap;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-1 .flyout_menu .menu_item .menu_title {
     padding: 1rem 2rem;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_title i {
   margin-right: 1.5rem;
   font-size: 2rem;
@@ -189,7 +148,6 @@ $breakpoint argument choices:
   height: 1rem;
   text-align: center;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu {
   position: absolute;
   top: 0;
@@ -200,11 +158,9 @@ $breakpoint argument choices:
   z-index: 999;
   visibility: hidden;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu .fo_header {
   display: none;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout_menu .menu_item .menu {
     position: fixed;
@@ -214,22 +170,15 @@ $breakpoint argument choices:
     width: 0%;
     height: 100vh;
     visibility: unset;
-    -webkit-transition: .2s ease-in-out;
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
   }
   .landing_page-1 .flyout_menu .menu_item .menu .fo_header {
     overflow: hidden;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     background-color: #b5057a;
     color: #fff;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    align-items: center;
+    justify-content: space-between;
   }
   .landing_page-1 .flyout_menu .menu_item .menu .fo_header h3 {
     padding: 1.5rem 0;
@@ -240,33 +189,20 @@ $breakpoint argument choices:
     margin-right: 2rem;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+  flex-flow: column wrap;
   height: 100%;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
+  align-content: flex-start;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout_menu .menu_item .menu_col {
     width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-flow: row wrap;
-        flex-flow: row wrap;
+    flex-direction: column;
+    flex-flow: row wrap;
     overflow-y: auto;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content {
   min-width: 25%;
   max-width: 25%;
@@ -274,9 +210,8 @@ $breakpoint argument choices:
   background-color: #fff;
   padding: 1rem 2rem;
   color: #616161;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout_menu .menu_item .menu_col-content {
     min-width: 100%;
@@ -285,7 +220,6 @@ $breakpoint argument choices:
     margin-bottom: 18rem;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content h3 {
   font-size: 1.5rem;
   font-weight: 600;
@@ -294,95 +228,70 @@ $breakpoint argument choices:
   overflow: hidden;
   white-space: nowrap;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content h3:hover {
-  background-image: -webkit-gradient(linear, left top, right top, from(#dc3545), to(#5d05b5));
   background-image: linear-gradient(to right, #dc3545, #5d05b5);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content p {
   font-size: 1.5rem;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content p:first-of-type {
   padding-top: 1rem;
-  border-top: .1rem solid;
+  border-top: 0.1rem solid;
   color: #616161;
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content p:not(:last-child) {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .flyout_menu .menu_item .menu_col-content p:not(:last-child) {
     margin-bottom: 1rem;
   }
 }
-
 .landing_page-1 .flyout_menu .menu_item .menu_col-content p:hover {
   font-weight: 650;
 }
-
 .landing_page-1 .image-slide {
   width: 82%;
   z-index: 9;
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-1 .image-slide {
     width: 100%;
   }
 }
-
 .landing_page-2 {
   background-color: #F4F2F4;
   padding: 1rem 4rem;
   text-align: center;
   margin-bottom: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-2 {
     padding: 1rem;
   }
 }
-
 .landing_page-2 .card {
   background-color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: .5rem;
+  align-items: center;
+  padding: 0.5rem;
   border-radius: 1rem;
   width: 18%;
   min-height: 6rem;
   max-height: 6rem;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-shadow: 0 5px 15px rgba(32, 30, 30, 0.2);
-          box-shadow: 0 5px 15px rgba(32, 30, 30, 0.2);
+  flex-wrap: nowrap;
+  box-shadow: 0 5px 15px rgba(32, 30, 30, 0.2);
   cursor: pointer;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-2 .card {
     width: 20%;
@@ -390,10 +299,9 @@ $breakpoint argument choices:
     max-height: 5rem;
   }
   .landing_page-2 .card:not(:last-child) {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 }
-
 @media only screen and (max-width: 600px) {
   .landing_page-2 .card {
     padding: 0;
@@ -401,53 +309,41 @@ $breakpoint argument choices:
     position: relative;
     min-height: 3.5rem;
     max-height: 3.5rem;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
-
 .landing_page-2 .card:hover {
-  -webkit-box-shadow: 0 10px 30px rgba(32, 30, 30, 0.2);
-          box-shadow: 0 10px 30px rgba(32, 30, 30, 0.2);
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: .5s;
-  transition: .5s;
+  box-shadow: 0 10px 30px rgba(32, 30, 30, 0.2);
+  transform: scale(1.1);
+  transition: 0.5s;
 }
-
 .landing_page-2 .card_img {
   width: 45px;
   height: 45px;
   margin-right: 1rem;
 }
-
 @media only screen and (max-width: 1000px) {
   .landing_page-2 .card_img {
     width: 30px;
     height: 30px;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 }
-
 @media only screen and (max-width: 800px) {
   .landing_page-2 .card_img {
     width: 20px;
     height: 20px;
   }
 }
-
 @media only screen and (max-width: 600px) {
   .landing_page-2 .card_img {
     padding: 0;
     margin: 0;
     filter: blur(0.4px);
     -webkit-filter: blur(0.4px);
-    -webkit-transform: scale(4, 2);
-            transform: scale(4, 2);
+    transform: scale(4, 2);
   }
 }
-
 .landing_page-2 .card_img img {
   border-radius: 50%;
   width: 100%;
@@ -455,13 +351,11 @@ $breakpoint argument choices:
   -o-object-fit: fill;
      object-fit: fill;
 }
-
 .landing_page-2 .card p {
   font-size: 1.3rem;
   font-weight: 500;
   color: #616161;
 }
-
 @media only screen and (max-width: 600px) {
   .landing_page-2 .card p {
     position: absolute;
@@ -470,20 +364,13 @@ $breakpoint argument choices:
     right: 0;
     bottom: 0;
     text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     color: #fff;
     text-shadow: #000 0px 0px 5px;
-    padding: .5rem;
+    padding: 0.5rem;
     overflow: hidden;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(10, 1, 1, 0.363);
   }
-}
-/*# sourceMappingURL=landingpagelayout.css.map */
+}/*# sourceMappingURL=landingpagelayout.css.map */
