--- a/src/styles/productlayout/productlayout.css
+++ b/src/styles/productlayout/productlayout.css
@@ -17,41 +17,30 @@ $breakpoint argument choices:
 .product {
   padding: 3rem 5rem;
 }
-
 @media only screen and (max-width: 1000px) {
   .product {
     padding: 2rem;
   }
 }
-
 @media only screen and (max-width: 800px) {
   .product {
     padding: 1rem;
     padding: 0;
   }
 }
-
 .product_description {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
-
 @media only screen and (max-width: 800px) {
   .product_description {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .product_description-1 {
   width: 40%;
 }
-
 @media only screen and (max-width: 800px) {
   .product_description-1 {
     width: 100vw;
@@ -60,7 +49,6 @@ $breakpoint argument choices:
     width: fit-content;
   }
 }
-
 @media only screen and (max-width: 800px) {
   .product_description-1_img {
     padding: 2rem;
@@ -68,28 +56,23 @@ $breakpoint argument choices:
     height: 100vw;
   }
 }
-
 .product_description-1_img img {
   width: 100%;
   height: 100%;
   -o-object-fit: fill;
      object-fit: fill;
 }
-
 .product_description-1 .product_categories {
   margin-top: 3rem;
 }
-
 .product_description-1 .product_categories-header {
   font-size: 1.7rem;
   margin-bottom: 1rem;
 }
-
 .product_description-2 {
   padding: 0 5rem;
   width: 60%;
 }
-
 @media only screen and (max-width: 800px) {
   .product_description-2 {
     width: -webkit-fit-content;
@@ -98,103 +81,77 @@ $breakpoint argument choices:
     padding: 2rem;
   }
 }
-
 .product_description-2_details .product_title {
   font-size: 3rem;
   margin-bottom: 2rem;
 }
-
 .product_description-2_details .product_price {
   font-size: 4rem;
   font-weight: 600;
   margin-bottom: 3rem;
   color: #7c7474;
 }
-
 .product_description-2_details .product_rating {
   margin-bottom: 3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .product_description-2_details .product_rating .rate_icon {
   margin-right: 1rem;
 }
-
 .product_description-2_details .product_rating .rate_icon i {
   color: #FFE500;
 }
-
 .product_description-2_details .product_rating p {
   font-size: 1.5rem;
 }
-
 .product_description-2_details .watchlist {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 3rem;
 }
-
 .product_description-2_details .watchlist p {
   font-size: 1.5rem;
   margin-left: 1rem;
 }
-
 .product_description-2_details .watchlist .like_btn {
-  background-color: #5d05b531;
+  background-color: rgba(93, 5, 181, 0.1921568627);
   border: none;
   border-radius: 10rem;
   cursor: pointer;
 }
-
 .product_description-2_details .watchlist .like_btn i {
   font-size: 3rem;
-  padding: .8rem;
-  -webkit-transform: translate(0, 5%);
-          transform: translate(0, 5%);
-  background-image: -webkit-gradient(linear, left top, right top, from(#dc3545), to(#5d05b5));
+  padding: 0.8rem;
+  transform: translate(0, 5%);
   background-image: linear-gradient(to right, #dc3545, #5d05b5);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 .product_description-2_details .order_quantity {
   margin-bottom: 3rem;
   width: 34rem;
 }
-
 .product_description-2_details .order_quantity h3 {
   font-size: 1.7rem;
   margin-bottom: 1.5rem;
 }
-
 .product_description-2_details .order_quantity h3 span {
   color: #7c7474;
   font-size: 1.5rem;
 }
-
 .product_description-2_details .order_quantity .add_cart {
   border: none;
   padding: 1rem;
   border-radius: 2rem;
   text-transform: uppercase;
   color: #fff;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#5D05B5), to(#dc3545));
   background-image: linear-gradient(to right bottom, #5D05B5, #dc3545);
   font-size: 2rem;
   margin-top: 2rem;
   width: 100%;
 }
-
 @media only screen and (max-width: 800px) {
   .product_description-2_details .order_quantity .add_cart {
     font-size: 1.5rem;
@@ -202,12 +159,10 @@ $breakpoint argument choices:
     padding: 1.3rem;
   }
 }
-
 .product_description-2_details .description_details h3 {
   font-size: 1.7rem;
   margin-bottom: 1rem;
 }
-
 .product_description-2_details .description_details p {
   font-size: 1.8rem;
 }
@@ -215,15 +170,12 @@ $breakpoint argument choices:
 .product_categories {
   margin-top: 3rem;
 }
-
 @media only screen and (max-width: 800px) {
   .product_categories {
     padding: 2rem;
   }
 }
-
 .product_categories-header {
   font-size: 1.7rem !important;
   margin-bottom: 1rem;
-}
-/*# sourceMappingURL=productlayout.css.map */
+}/*# sourceMappingURL=productlayout.css.map */
