--- a/src/styles/search/search.css
+++ b/src/styles/search/search.css
@@ -18,53 +18,37 @@ $breakpoint argument choices:
   padding: 0 6rem;
   margin-top: 1rem;
   font-size: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 @media only screen and (max-width: 800px) {
   .search_results {
     padding: 0 2rem;
   }
 }
-
 .search_results strong {
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
-
 .search .notfound {
   padding: 0 6rem;
   font-size: 2rem;
   margin-top: 2.5rem;
   color: #dc3545;
 }
-
 @media only screen and (max-width: 800px) {
   .search .notfound {
     padding: 2rem;
   }
 }
-
 .search .notfound_icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .search .notfound_icon .animated_icon {
   margin-top: -10rem;
 }
-
 @media only screen and (max-width: 800px) {
   .search .notfound_icon .animated_icon {
     margin-top: -8rem;
   }
-}
-/*# sourceMappingURL=search.css.map */
+}/*# sourceMappingURL=search.css.map */
